Splitting the secom services per version, in line with AtoN Service