@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 GLA Research and Development Directorate
+ * Copyright (c) 2025 GLA Research and Development Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,28 +14,27 @@
  * limitations under the License.
  */
 
-package org.grad.eNav.atonAdminService.services.secom;
+package org.grad.eNav.atonAdminService.services.secom.v1;
 
-import jakarta.validation.constraints.NotNull;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-import org.grad.secomv2.core.exceptions.SecomNotFoundException;
-import org.grad.secomv2.core.exceptions.SecomValidationException;
-import org.grad.secomv2.core.models.ResponseSearchObject;
-import org.grad.secomv2.core.models.SearchFilterObject;
-import org.grad.secomv2.core.models.SearchObjectResult;
-import org.grad.secomv2.core.models.SearchParameters;
-import org.grad.secomv2.springboot3.components.SecomClient;
-import org.grad.secomv2.springboot3.components.SecomConfigProperties;
+import org.grad.secom.core.exceptions.SecomNotFoundException;
+import org.grad.secom.core.exceptions.SecomValidationException;
+import org.grad.secom.core.models.ResponseSearchObject;
+import org.grad.secom.core.models.SearchFilterObject;
+import org.grad.secom.core.models.SearchObjectResult;
+import org.grad.secom.core.models.SearchParameters;
+import org.grad.secom.springboot3.components.SecomClient;
+import org.grad.secom.springboot3.components.SecomConfigProperties;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import jakarta.annotation.PostConstruct;
-import jakarta.annotation.PreDestroy;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
 import java.security.UnrecoverableKeyException;
@@ -43,16 +42,22 @@ import java.security.cert.CertificateException;
 import java.util.*;
 
 /**
- * The SECOM Service Class.
+ /**
+ * The SECOM v1 Service Class.
  *
- * A service to handle the general SECOM requests that need additional
+ * A service to handle the general SECOM v1 requests that need additional
  * processing, not covered by the existing services, e.g signing.
  *
  * @author Nikolaos Vastardis (email: Nikolaos.Vastardis@gla-rad.org)
  */
 @Service
 @Slf4j
-public class SecomService {
+public class SecomV1Service {
+
+    /**
+     * The maximum number of results for unpaged discovery searches
+     */
+    public static int MAX_UNPAGED_RESULTS_NO = 100;
 
     /**
      * The Service Registry URL.
@@ -61,13 +66,15 @@ public class SecomService {
     String discoveryServiceUrl;
 
     /**
-     * The SECOM Configuration Properties.
+     * The SECOM v1 Configuration Properties.
      */
     @Autowired
     SecomConfigProperties secomConfigProperties;
 
     // Class Variables
     SecomClient discoveryService;
+    private SearchObjectResult searchObjectResult;
+    private ResponseSearchObject responseSearchObject;
 
     /**
      * The service post-construct operations where the handler auto-registers
@@ -75,22 +82,24 @@ public class SecomService {
      */
     @PostConstruct
     public void init() {
-        log.info("SECOM Service is booting up...");
+        log.info("SECOM v1 Service is booting up...");
         this.discoveryService = Optional.ofNullable(this.discoveryServiceUrl)
                 .filter(StringUtils::isNotBlank)
                 .map(url -> {
                     try {
-                        return new URL(url);
+                        return URI.create(url).toURL();
                     } catch (MalformedURLException ex) {
-                        log.error("Invalid SECOM discovery service URL provided...", ex);
+                        log.error("Invalid SECOM v1 discovery service URL provided...", ex);
                         return null;
                     }
                 })
                 .map(url -> {
                     try {
                         return new SecomClient(url, this.secomConfigProperties);
-                    } catch (IOException | KeyStoreException | NoSuchAlgorithmException | CertificateException | UnrecoverableKeyException ex) {
-                        log.error("Unable to initialise the SSL context for the SECOM discovery service...", ex);
+                    } catch (IOException | KeyStoreException |
+                             NoSuchAlgorithmException | CertificateException |
+                             UnrecoverableKeyException ex) {
+                        log.error("Unable to initialise the SSL context for the SECOM v1 discovery service...", ex);
                         return null;
                     }
                 })
@@ -103,7 +112,7 @@ public class SecomService {
      */
     @PreDestroy
     public void destroy() {
-        log.info("SECOM Service is shutting down...");
+        log.info("SECOM v1 Service is shutting down...");
         this.discoveryService = null;
     }
 
@@ -146,34 +155,10 @@ public class SecomService {
 
         // Now construct and return a SECOM client for the discovered URI
         try {
-            return new SecomClient(new URL(instance.getEndpointUri()), this.secomConfigProperties);
-        } catch (IOException | KeyStoreException | NoSuchAlgorithmException | CertificateException | UnrecoverableKeyException ex) {
+            return new SecomClient(URI.create(instance.getEndpointUri()).toURL(), this.secomConfigProperties);
+        } catch (Exception ex) {
             log.error(ex.getMessage(), ex);
             throw new SecomValidationException(ex.getMessage());
         }
     }
-
-    /**
-     * This function allows the definition of SECOM clients without accessing
-     * the SECOM Service Registry. By simply providing the callback URL of the
-     * client, along with the standard SECOM configuration properties, we can
-     * construct a valid SECOM client.
-     *
-     * @param url the URL of the SECOM client
-     * @return the constucted SECOM client for the provided URL
-     */
-    public SecomClient getClient(@NotNull URL url) {
-        // Validate the MRN
-        Optional.ofNullable(url)
-                .orElseThrow(() -> new SecomValidationException("Cannot request SECOM client for an empty/invalid URL"));
-
-        // Now construct and return a SECOM client for the discovered URI
-        try {
-            return new SecomClient(url, this.secomConfigProperties);
-        } catch (IOException | KeyStoreException | NoSuchAlgorithmException | CertificateException | UnrecoverableKeyException ex) {
-            log.error(ex.getMessage(), ex);
-            throw new SecomValidationException(ex.getMessage());
-        }
-    }
-
 }
